[BUGFIX] Unset z-index global-search-results search-button
This fixes search-button being visible & accessible through opened
modals.

--- a/packages/typo3-docs-theme/resources/public/css/theme.css
+++ b/packages/typo3-docs-theme/resources/public/css/theme.css
@@ -24667,6 +24667,10 @@ dl.command .command-arguments section {
   visibility: visible;
 }
 
+#global-search-results button {
+  z-index: unset;
+}
+
 #indexNav {
   background-color: rgb(242.25, 242.25, 242.25);
   border-radius: 8px;
